# bansheefinder2

./: Cargo.toml  install.sh  send.sh
src/: autocomplete.rs  launcher.rs  main.rs  path_interpreter.rs  program_search.rs  programs_list.rs  style.rs  sudo_password.rs  types.rs
src/autocomplete/: default.rs  killall.rs  mod.rs  open_project.rs  program_sorting.rs  sudo.rs  types.rs  x11_forward.rs
src/autocomplete2/: default.rs  mod.rs  open_project.rs  types.rs
