[package]
name = "bansheefinder2"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { features = ["image", "tokio", "svg"], path = "../iced" }
iced_graphics = { path = "../iced/graphics" }
iced_futures = { path = "../iced/futures" }
iced_native = { path = "../iced/native" }
iced_style = { path = "../iced/style" }
tokio = { features = ["full"], version = "1.20.1" }
