[package]
name = "bansheefinder2"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.22"
iced = { features = ["image", "tokio", "svg"], path = "../iced" }
iced_graphics = { path = "../iced/graphics" }
iced_futures = { path = "../iced/futures" }
iced_native = { path = "../iced/native" }
iced_style = { path = "../iced/style" }
lazy_static = "1.4.0"
tokio = { features = ["full"], version = "1.20.1" }
